--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>New Tab </title>
   </head>
   <body>
-    Testing 
-
+    <main>
+      <h1 id="clock">
+        <div id="hours"></div>
+        <div id="colon" class="vis-hid">:</div>
+        <div id="minutes"></div>
+        <div id="meridiem"></div>
+      </h1>
+    </main>
+    <script src="scripts/global.js"></script>
+    <script src="scripts/logicking.js" defer></script>
+    <script src="scripts/main.js" defer></script>
   </body>
 </html>
