--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Tab </title>
+    <title>New Tab</title>
   </head>
   <body>
     <main>
@@ -15,8 +15,8 @@
         <div id="meridiem"></div>
       </h1>
     </main>
+    <script src="scripts/script.js"></script>
     <script src="scripts/global.js"></script>
-    <script src="scripts/logicking.js" defer></script>
     <script src="scripts/main.js" defer></script>
   </body>
 </html>
